Fix minor scrollbar issue in some breadcrumb items

--- a/src/components/breadcrumb/_breadcrumb.scss
+++ b/src/components/breadcrumb/_breadcrumb.scss
@@ -166,7 +166,6 @@
           flex-shrink: 0;
 
           a {
-            overflow: auto;
             text-overflow: clip;
             width: auto;
           }
